@@ -163,9 +163,9 @@ func HealthCheck(c *gin.Context) {
 		status["message"] = "Proxy service working as expected"
 
 		if sdkStatus["healthy"].(bool) && eventsStatus["healthy"].(bool) {
-			c.JSON(http.StatusOK, gin.H{"proxy": status, "sdk": sdkStatus, "events": eventsStatus})
+			c.JSON(http.StatusOK, gin.H{"proxy": status, "sdk": sdkStatus, "events": eventsStatus, "lastCheck": task.GetLastSucceed()})
 		} else {
-			c.JSON(http.StatusInternalServerError, gin.H{"proxy": status, "sdk": sdkStatus, "events": eventsStatus})
+			c.JSON(http.StatusInternalServerError, gin.H{"proxy": status, "sdk": sdkStatus, "events": eventsStatus, "lastCheck": task.GetLastSucceed()})
 		}
 	} else {
 		status["message"] = "Synchronizer service working as expected"
@@ -192,9 +192,9 @@ func HealthCheck(c *gin.Context) {
 		}
 
 		if storageStatus["healthy"].(bool) && sdkStatus["healthy"].(bool) && eventsStatus["healthy"].(bool) {
-			c.JSON(http.StatusOK, gin.H{"sync": status, "storage": storageStatus, "sdk": sdkStatus, "events": eventsStatus})
+			c.JSON(http.StatusOK, gin.H{"sync": status, "storage": storageStatus, "sdk": sdkStatus, "events": eventsStatus, "lastCheck": task.GetLastSucceed()})
 		} else {
-			c.JSON(http.StatusInternalServerError, gin.H{"sync": status, "storage": storageStatus, "sdk": sdkStatus, "events": eventsStatus})
+			c.JSON(http.StatusInternalServerError, gin.H{"sync": status, "storage": storageStatus, "sdk": sdkStatus, "events": eventsStatus, "lastCheck": task.GetLastSucceed()})
 		}
 	}
 
