@@ -1,6 +1,7 @@
 2.3.1 (Jun , 2019)
  - Merged controllers for web admin dashboard.
  - Added label in Sync Dashboard to indicate on which mode it started (Synchronizer or Proxy).
+ - Added task to check Sync environtment and added lastSucceed property to healtheck endpoint.
 2.3.0 (May 30, 2019)
  - Added support for track properties
  - Added cache overlay on top of redis for fetching events
